Fixed menu bar jumping to new line

--- a/stuff/McBigTextSignGenerator/style.css
+++ b/stuff/McBigTextSignGenerator/style.css
@@ -29,6 +29,7 @@ body,html {
     height: 100%;
     overflow: hidden;
     background-color: limegreen;
+    white-space: nowrap;
 }
 
 #menu-main, #menu-bar {
